--- a/ExRam.Gremlinq/ExRam.Gremlinq.csproj
+++ b/ExRam.Gremlinq/ExRam.Gremlinq.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard20</TargetFrameworks>
-    <Version>2.1.0</Version>
+    <Version>2.1.1-local-00012</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   
